refactor: modernizar código a Java 16+ patterns
- Cambiar .collect(Collectors.toList()) a .toList() (13 archivos)
- Usar pattern matching para instanceof (10 archivos)
- Mejora la legibilidad y reduce código boilerplate